syntax = "proto3";

option java_package = "com.guipalm4";
option java_multiple_files = true;

package com.guipalm4;

service ProductService {
  rpc Create(ProductRequest) returns (ProductResponse);
  rpc FindById(RequestById) returns (ProductResponse);
  rpc Delete(RequestById) returns (ProductResponse);
  rpc FindAll(EmptyRequest) returns (ProductResponseList);
}

message ProductRequest {
  string name = 1;
  double price = 2;
  int32 stock = 3;
}

message ProductResponse {
  string id = 1;
  string name = 2;
  double price = 3;
  int32 stock = 4;
}

message RequestById {
  string id = 1;
}

message EmptyRequest{}

message ProductResponseList{
  repeated ProductResponse products = 1;
}